kubernetes/manifest/ingress/bpp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS, DELETE"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,X-CustomHeader,X-LANG,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,X-Api-Key,X-Device-Id,Access-Control-Allow-Origin"
  name: app-ingress
spec:
  rules:
  - host: kubernetes.hom-bpp.com.br # Mude para o seu endereço
    http:
      paths:
      - backend:
          serviceName: gatewayapi
          servicePort: 9900
        path: /gatewayapi

      # - backend:
      #     serviceName: authorizationshim
      #     servicePort: 8810
      #   path: /authorizationshim

      # - path: /paymentaccountshim
      #   backend:
      #     serviceName: paymentaccountshim
      #     servicePort: 9956
        
      # - backend:
      #     serviceName: tedshim
      #     servicePort: 9961
      #   path: /tedshim

      # - backend:
      #     serviceName: cardshim
      #     servicePort: 9959
      #   path: /cardshim

      # - backend:
      #     serviceName: billingshim
      #     servicePort: 9960
      #   path: /billingshim

      - backend:
          serviceName: boletoshim
          servicePort: 9930
        path: /boletoshim

      # - backend:
      #     serviceName: bppdigitalshim
      #     servicePort: 9961
      #   path: /bppdigitalshim

      # - backend:
      #     serviceName: bpppagshim
      #     servicePort: 9951
      #   path: /bpppagshim

      # - backend:
      #     serviceName: bpppjbankshim
      #     servicePort: 9950
      #   path: /bpppjbankshim

      # - backend:
      #     serviceName: bppwebshim
      #     servicePort: 9916
      #   path: /bppwebshim

      # - backend:
      #     serviceName: legacyshim
      #     servicePort: 9952
      #   path: /legacyshim

      # - backend:
      #     serviceName: ordershim
      #     servicePort: 9958
      #   path: /ordershim
