kubernetes/manifest/ingress/site-with-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  ports:
    - port: 80 # the port that this service should serve on
      targetPort: 80 #Container Port
      protocol: TCP
  selector:
    app: nginx
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/limit-rpm: "2"
    # nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/http-snippet: |
      limit_req_startus 429;

spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /teste
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
